--- a/package.json
+++ b/package.json
@@ -9,8 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.4",
+    "@cloudinary/url-gen": "^1.10.1",
+    "@metaplex-foundation/js": "^0.17.12",
+    "@metaplex/js": "^4.12.0",
+    "@solana/wallet-adapter-phantom": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.32",
+    "@solana/web3.js": "^1.77.3",
+    "@thirdweb-dev/react": "^3.13.0",
+    "axios": "^1.4.0",
+    "bs58": "^5.0.0",
+    "connect": "^3.7.0",
+    "frpm": "^0.0.8",
+    "meta": "^0.0.6",
+    "nc": "^0.0.0",
+    "next": "^13.4.4",
+    "next-connect": "^0.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
